v2.0.2 - Fix #23: On mobile, when scrolling down, the document can jump if its height is slightly higher than the screen

--- a/themes/Clean/less/humhub/mobile.less
+++ b/themes/Clean/less/humhub/mobile.less
@@ -1,10 +1,4 @@
 @media (max-width: @screen-sm-min) {
-
-  :root {
-    --hh-ct-top-bar-height: 50px !important;
-    --hh-fixed-header-height: 55px !important;
-  }
-
   // Layout Contents: Adjusting the content to fit perfectly on mobile devices
   #layout-content {
     // Layout Space: Space navigation
@@ -64,10 +58,6 @@
 
 // Size for the bottom menu
 @media (max-width: @screen-xs-min) {
-  :root {
-    --hh-fixed-footer-height: 52px !important;
-  }
-
   #topbar {
     > .container {
       .caret {
