--- a/themes/Clean/less/modules/clean-theme.less
+++ b/themes/Clean/less/modules/clean-theme.less
@@ -4,10 +4,6 @@
 
 @media (max-width: @screen-xs-min) {
   body.hide-top-menu {
-    & {
-      padding-top: 0;
-    }
-
     #topbar {
       top: calc(var(--hh-ct-top-bar-height) * -1); // negative value of --top-bar-height
       transition: top 0.6s;
@@ -15,10 +11,6 @@
   }
 
   body.hide-bottom-menu {
-    & {
-      padding-bottom: 0;
-    }
-
     #topbar > .container #top-menu-nav {
       bottom: -50px;
       padding-bottom: 0;
